Spread out Functions

--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,35 @@
 body{
-  padding: 20px;
   font-family: Arial, Helvetica, sans-serif;
   background: #27292c;
-  color: white;
+  color: #ffffff;
+  margin: 10px;
 }
 
-h1{
-  margin-top: 30px;
+
+.nav-list{
+  list-style: none;
+  display: flex;
+}
+
+.header{
+  padding: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: black;
+}
+
+.nav-list li{
+  font-size: 1.1rem;
+  margin-left: 20px;
+}
+
+.logo{
+  width: 55px;
+}
+
+.footer{
+  padding: 15px;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.584);
 }
