--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,10 @@ body{
   color: #01dafe;
   font-size: 30px;
   margin-left: 10px;
+  transition: all 2s ease-in-out;
+  background: -webkit-linear-gradient(-50deg, white, #01dafe, white);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .logo{
@@ -24,6 +28,7 @@ body{
 }
 
 .navbar{
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 8px 24px;
   background-color: #1e1f26;
   display: flex;
   align-items: center;
@@ -41,6 +46,13 @@ body{
 .heading{
   color: aliceblue;
   font-size: 2.4rem;
+}
+
+.heading:hover{
+  color: aliceblue;
+  font-size: 2.4rem;
+  text-decoration: underline;
+  text-underline-offset: 10px;
 }
 
 .list > li{
